<resources>
    <string name="app_name">DigitalFit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="init">Início</string>
    <string name="exercises">Exercícios</string>
    <string name="workout">Treinos</string>
    <string name="profile">Perfil</string>
    <string name="nutrition">Nutrição</string>
    <string name="treinos">Treinos</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="Equipments">Equipamentos</string>
    <string name="filter">Filtrar por</string>
    <string name="all">Todos</string>
    <string name="MuscleGroups">Grupos Musculares</string>
    <string name="exercicios">exercícios</string>
    <string name="Exercises">Exercícios</string>
    <string name="Musculação">Musculação</string>
    <string name="Aeróbicos">Aeróbicos</string>
    <string name="digital_fit">DIGITAL FIT</string>
    <string name="entrar_com_email">ENTRAR COM E-MAIL</string>
    <string name="entrar_com_conta_google">ENTRAR COM CONTA GOOGLE</string>
    <string name="cadastre_se">CADASTRE-SE</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="iniciar_sessao">INICIAR SESSÃO</string>
    <string name="esqueceu_a_senha">ESQUECEU A SENHA ?</string>
    <string name="recuperar_senha">RECUPERAR SENHA</string>
    <string name="e_maill">E-mail</string>
    <string name="termos_uso">Aceito os Termos de Uso e as Politicas de Privacidade</string>
    <string name="senha_cadastro">Senha</string>
    <string name="nome_cadastro">Nome</string>
    <string name="cadastro">Cadastro</string>
    <string name="enviar_email">ENVIAR E-MAIL DE RECUPERAÇÃO</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="workout_list">Lista de Treinos</string>
    <string name="burn">Calorias (Kcal)</string>
    <string name="duration">Duração (minutos)</string>
    <string name="quantity">Qtd. (exercícios)</string>
    <string name="bsFilterTitle">Filtros:</string>
    <string name="favorites">Favoritos</string>
    <string name="myExercises">Meus exercícios</string>
    <string name="allExercises">Todos os exercícios</string>
    <string name="apply_button">APLICAR</string>
    <string name="cardio">Cardio</string>
    <string name="panturrilha">Panturrilha</string>
    <string name="adutores">Adutores</string>
    <string name="abdutores">Abdutores</string>
    <string name="gluteos">Glúteos</string>
    <string name="isquiotibiais">Isquiotibiais</string>
    <string name="quadriceps">Quadríceps</string>
    <string name="legs">Pernas</string>
    <string name="antebracos">Antebraços</string>
    <string name="triceps">Tríceps</string>
    <string name="biceps">Bíceps</string>
    <string name="ombros">Ombros</string>
    <string name="arms">Braços</string>
    <string name="dorsais">Dorsais</string>
    <string name="trapezio">Trapézio</string>
    <string name="lombares">Lombares</string>
    <string name="back">Costas</string>
    <string name="obliquos">Oblíquos</string>
    <string name="abdomen">Abdômen</string>
    <string name="peitoral">Peitoral</string>
    <string name="front">Frente</string>
    <string name="MuscleGroupTitle">Grupos Musculares:</string>
    <string name="EquipmentsTitle">Equipamentos:</string>
    <string name="bola">Bola</string>
    <string name="trx">TRX</string>
    <string name="livre">Livre</string>
    <string name="barra_fixa">Barra fixa</string>
    <string name="caneleira">Caneleira</string>
    <string name="polia">Polia</string>
    <string name="smith">Smith</string>
    <string name="halter">Halter</string>
    <string name="barra">Barra</string>
    <string name="aparelho">Aparelho</string>
    <string name="error_default">Erro desconhecido, tente novamente</string>
    <string name="exercise_add">Adicionar exercício</string>
    <string name="name">Nome</string>
    <string name="required">Obrigatório*</string>
    <string name="description">Descrição</string>
    <string name="optional">Opcional</string>
    <string name="image">Imagem</string>
    <string name="target_muscle">Músculos alvo</string>
    <string name="next_training">Próximo Treino</string>
    <string name="next_meal">Próxima Refeição</string>
    <string name="body_data">Dados Corporais</string>
    <string name="exercise_name">Nome do Exercício</string>
    <string name="description_value">Descrição do exercício</string>
    <string name="primary_muscle">Músculos Primários</string>
    <string name="muscle_list">Lista de músculos</string>
    <string name="secondary_muscle">Músculos Secundários</string>
    <string name="workout_name">Nome do Treino</string>
    <string name="share">Compartilhar</string>

</resources>