<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_background"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".features.exercises.viewmodel.BottomSheetEquipmentsFragment">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scEquipments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp">


        <LinearLayout
            android:id="@+id/cbEquipmentsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEquipments">

            <TextView
                android:id="@+id/tvEquipments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_default"
                android:layout_marginTop="@dimen/vertical_margin_default"
                android:layout_marginBottom="@dimen/vertical_margin_between_contents"
                android:text="@string/EquipmentsTitle"
                android:textColor="@color/white"
                android:textSize="@dimen/secondary_title_default" />


            <CheckBox
                android:id="@+id/cbEquipments1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/aparelho"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />


            <CheckBox
                android:id="@+id/cbEquipments2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/barra"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbEquipments3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/halter"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbEquipments4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/smith"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbEquipments5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/polia"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbEquipments6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/caneleira"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbEquipments7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/barra_fixa"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbEquipments8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/livre"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbEquipments9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/trx"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbEquipments10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/bola"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btEquipments"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/margin_default"
        android:backgroundTint="@color/aqua_button"
        android:paddingHorizontal="60dp"
        android:text="@string/apply_button"
        app:cornerRadius="@dimen/cornerRadiusButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>