<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_background"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".features.exercises.viewmodel.BottomSheetMusclesFragment">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scMuscleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp">


        <LinearLayout
            android:id="@+id/cbMuscleGroupList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMuscleGroup">

            <TextView
                android:id="@+id/tvMuscleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_default"
                android:layout_marginStart="@dimen/horizontal_margin_default"
                android:text="@string/MuscleGroupTitle"
                android:textColor="@color/white"
                android:textSize="@dimen/secondary_title_default"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_between_contents"
                android:layout_marginStart="@dimen/horizontal_margin_default"
                android:text="@string/frente"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbMuscleGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/peitoral"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />


            <CheckBox
                android:id="@+id/cbMuscleGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/abdomen"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbMuscleGroup3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/obliquos"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_between_contents"
                android:layout_marginStart="@dimen/horizontal_margin_default"
                android:text="@string/costas"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbMuscleGroup4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/lombares"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbMuscleGroup5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/trapezio"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbMuscleGroup6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/dorsais"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_between_contents"
                android:layout_marginStart="@dimen/horizontal_margin_default"
                android:text="@string/bracos"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbMuscleGroup7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/ombros"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbMuscleGroup8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/biceps"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbMuscleGroup9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/triceps"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbMuscleGroup10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/antebracos"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_between_contents"
                android:layout_marginStart="@dimen/horizontal_margin_default"
                android:text="@string/pernas"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbMuscleGroup11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/quadriceps"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbMuscleGroup12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/isquiotibiais"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbMuscleGroup13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/gluteos"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbMuscleGroup14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/abdutores"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbMuscleGroup15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/adutores"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <CheckBox
                android:id="@+id/cbMuscleGroup16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/panturrilha"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_between_contents"
                android:layout_marginStart="@dimen/horizontal_margin_default"
                android:text="@string/cardio"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbMuscleGroup17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
                android:buttonTint="@color/light_grey"
                android:layoutDirection="rtl"
                android:text="@string/cardio"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/checkBox_text_size" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btMuscleGroup"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/margin_default"
        android:backgroundTint="@color/aqua_button"
        android:paddingHorizontal="60dp"
        android:text="@string/apply_button"
        app:cornerRadius="@dimen/cornerRadiusButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>